--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,32 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
+ 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+	@apply min-h-screen bg-slate-100 text-black;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+input:focus {
+	@apply outline-none;
   }
-}
+  
+  .btn {
+	@apply bg-rose-500 text-white py-2 px-6 mt-4 rounded-full shadow-lg shadow-rose-200;
+  }
+
+  .audio-all audio::-webkit-media-controls-panel {
+    background-color: white;
+  }
+  
+
+  .audio-header audio::-webkit-media-controls-panel {
+    background-color: lightgray;
+    
+  }
+
+  .card {
+	@apply bg-white shadow-md rounded-md;
+  }
